testsuite/tests/typing-extensions/cast.ocaml.reference
Line 9, characters 0-4:
9 | type 'a class_name = .. constraint 'a = < cast : 'a. 'a name -> 'a ; .. >
    ^^^^
Error: Syntax error
Line 4, characters 0-13:
4 | push_castable (new foo);;
    ^^^^^^^^^^^^^
Error: Unbound value "push_castable"
Line 2, characters 0-13:
2 | push_castable (new bar);;
    ^^^^^^^^^^^^^
Error: Unbound value "push_castable"


Line 4, characters 0-3:
4 | let c1 : castable = pop_castable ()
    ^^^
Error: Syntax error

